--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-<nav class="top-bar ">
+<nav class="top-bar" id="nav">
   <div>
     <ul class="title-area">
       <li class="name">
@@ -37,8 +37,6 @@
     <section class="top-bar-section">
       <ul class="right">
         <li><a href="/home">Home</a></li>
-        <li><a href="/about">About us</a></li>
-        <li><a href="/contact">Contact us</a></li>
         <li><a href="/diet_planner">Diet Planner</a></li>
         <li><a href="/recipes">Healthy Recipes</a></li>
         <li><a href="/news">Healthy living News</a></li>
