Added the nutritious gem functionality and accordeon. Still need to write test for it

--- a/app/views/site/_side_bar.html.erb
+++ b/app/views/site/_side_bar.html.erb
@@ -6,7 +6,7 @@
   <li class="active"><a href="/exercise_logs">Exercise logs</a></li>
   <li><a href="/food_intake_logs">Food Intake logs</a></li>
   <li><a href="/weight_logs">Weight logs</a></li>
-  <li><a href="#">Nutritional advise</a></li>
+  <li><a href="/nutritional_advice/index">Nutritional advise</a></li>
   <% if current_user && current_user.admin? %>
       <li class="divider"></li>
       <li><a href="/recipes">Recipes</a></li>
