--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -30,3 +30,113 @@ div.sidebar {padding-top: 100px;}
 a-webkit-any-link{
   color: #E215A9;
 }
+#accordion {
+  margin: 50px auto;
+}
+
+#accordion .ui-accordion-content {
+  width: 100%;
+  background-color: #f3f3f3;
+  color: #777;
+  font-size: 10pt;
+  line-height: 16pt;
+}
+
+#accordion .ui-accordion-header {
+  background-color: #ccc;
+  margin: 0px;
+}
+
+#accordion .ui-accordion-header:first-of-type {
+  background-color: #fa9300;
+  background-image: -moz-linear-gradient(top,  #fa9300 0%, #dc621e 100%); /* FF3.6+ */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fa9300), color-stop(100%,#dc621e)); /* Chrome,Safari4+ */
+  background-image: -webkit-linear-gradient(top,  #fa9300 0%,#dc621e 100%); /* Chrome10+,Safari5.1+ */
+  background-image: -o-linear-gradient(top,  #fa9300 0%,#dc621e 100%); /* Opera 11.10+ */
+  background-image: -ms-linear-gradient(top,  #fa9300 0%,#dc621e 100%); /* IE10+ */
+  background-image: linear-gradient(to bottom,  #fa9300 0%,#dc621e 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fa9300', endColorstr='#dc621e',GradientType=0 ); /* IE6-9 */
+}
+
+#accordion .ui-accordion-header:nth-of-type(2) {
+  background-color: #389abe;
+  background-image: -moz-linear-gradient(top,  #389abe 0%, #2a7b99 100%); /* FF3.6+ */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#389abe), color-stop(100%,#2a7b99)); /* Chrome,Safari4+ */
+  background-image: -webkit-linear-gradient(top,  #389abe 0%,#2a7b99 100%); /* Chrome10+,Safari5.1+ */
+  background-image: -o-linear-gradient(top,  #389abe 0%,#2a7b99 100%); /* Opera 11.10+ */
+  background-image: -ms-linear-gradient(top,  #389abe 0%,#2a7b99 100%); /* IE10+ */
+  background-image: linear-gradient(to bottom,  #389abe 0%,#2a7b99 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#389abe', endColorstr='#2a7b99',GradientType=0 ); /* IE6-9 */
+}
+#accordion .ui-accordion-header:nth-of-type(3) {
+  background-color: #f87aa0; /* Old browsers */
+  background-image: -moz-linear-gradient(top, #f87aa0 0%, #c86585 100%); /* FF3.6+ */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f87aa0), color-stop(100%,#c86585)); /* Chrome,Safari4+ */
+  background-image: -webkit-linear-gradient(top, #f87aa0 0%,#c86585 100%); /* Chrome10+,Safari5.1+ */
+  background-image: -o-linear-gradient(top, #f87aa0 0%,#c86585 100%); /* Opera 11.10+ */
+  background-image: -ms-linear-gradient(top,  #f87aa0 0%,#c86585 100%); /* IE10+ */
+  background-image: linear-gradient(to bottom,  #f87aa0 0%,#c86585 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f87aa0', endColorstr='#c86585',GradientType=0 ); /* IE6-9 */
+}
+#accordion .ui-accordion-header:nth-of-type(4) {
+  background-color: #a8b700;
+  background-image: -moz-linear-gradient(top,  #a8b700 0%, #82922a 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a8b700), color-stop(100%,#82922a)); /* Chrome,Safari4+ */
+  background-image: -webkit-linear-gradient(top,  #a8b700 0%,#82922a 100%);
+  background-image: -o-linear-gradient(top,  #a8b700 0%,#82922a 100%);
+  background-image: -ms-linear-gradient(top,  #a8b700 0%,#82922a 100%);
+  background-image: linear-gradient(to bottom,  #a8b700 0%,#82922a 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a8b700', endColorstr='#82922a',GradientType=0 ); /* IE6-9 */
+}
+#accordion .ui-accordion-header:nth-of-type(5) {
+  background-color: #c679ff;
+  background-image: -moz-linear-gradient(top,  #c679ff 0%, #AB2BFF 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a8b700), color-stop(100%,#AB2BFF)); /* Chrome,Safari4+ */
+  background-image: -webkit-linear-gradient(top,  #c679ff 0%,#AB2BFF 100%);
+  background-image: -o-linear-gradient(top,  #c679ff 0%,#AB2BFF 100%);
+  background-image: -ms-linear-gradient(top,  #c679ff 0%,#AB2BFF 100%);
+  background-image: linear-gradient(to bottom,  #c679ff 0%,#AB2BFF 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c679ff', endColorstr='#AB2BFF',GradientType=0 ); /* IE6-9 */
+}
+
+#accordion .ui-accordion-header:nth-of-type(6) {
+  background-color: #ff6b77;
+  background-image: -moz-linear-gradient(top,  #ff6b77 0%, #FF3128 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a8b700), color-stop(100%,FF3128)); /* Chrome,Safari4+ */
+  background-image: -webkit-linear-gradient(top,  #ff6b77 0%,#FF3128 100%);
+  background-image: -o-linear-gradient(top,  #ff6b77 0%,#FF3128 100%);
+  background-image: -ms-linear-gradient(top,  #ff6b77 0%,#FF3128 100%);
+  background-image: linear-gradient(to bottom,  #ff6b77 0%,#FF3128 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff6b77', endColorstr='#FF3128',GradientType=0 ); /* IE6-9 */
+}
+
+#accordion .ui-accordion-header:last-of-type {
+  background-color: #b3bec4;
+  background-image: -moz-linear-gradient(top,  #b3bec4 0%, #95a0a4 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b3bec4), color-stop(100%,#95a0a4));
+  background-image: -webkit-linear-gradient(top,  #b3bec4 0%,#95a0a4 100%);
+  background-image: -o-linear-gradient(top,  #b3bec4 0%,#95a0a4 100%);
+  background-image: -ms-linear-gradient(top,  #b3bec4 0%,#95a0a4 100%);
+  background-image: linear-gradient(to bottom,  #b3bec4 0%,#95a0a4 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3bec4', endColorstr='#95a0a4',GradientType=0 ); /* IE6-9 */
+}
+
+#accordion .ui-accordion-content {
+  box-shadow: inset 0px -1px 0px 0px rgba(0, 0, 0, .4),
+  inset 0px 1px 1px 0px rgba(0, 0, 0, .2);
+}
+#accordion .ui-accordion-content:last-of-type {
+  box-shadow: inset 0px 1px 1px 0px rgba(0, 0, 0, .2),
+  inset 0px 0 0px 0px rgba(0, 0, 0, .5);
+}
+
+#accordion h3 {
+  font-weight: 900;
+  padding:5px;
+  display: flex;
+  font-size: 120%;
+  color: white;
+}
+#accordion p {
+  margin: 20px;
+}
