--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -27,8 +27,16 @@ div.sidebar {padding-top: 100px;}
 .chosen-rtl .chosen-drop {
   left: -9000px;
 }
-a-webkit-any-link{
-  color: #E215A9;
+
+table th a:visited {
+  color: #2ba6cb;
+}
+table th a:hover {
+  color: #6c6c6c;
+  background: white;
+}
+table th a {
+  color: #2c8ab0;
 }
 #accordion {
   margin: 50px auto;
