--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
     </ul>
     <section class="top-bar-section">
       <ul class="right">
-        <li><a href="/home">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/diet_planner">Diet Planner</a></li>
         <li><a href="/recipes">Healthy Recipes</a></li>
         <li><a href="/news">Healthy living News</a></li>
