Created stats controller and moved graphs from site#index to stats#index

--- a/app/views/site/_side_bar.html.erb
+++ b/app/views/site/_side_bar.html.erb
@@ -2,7 +2,7 @@
   <li><a href="#">Dashboard</a></li>
   <li><a href="/profiles">Profile</a></li>
   <li><a href="/motivational_images">Motivational images</a></li>
-  <li><a href="#">Progress Stats</a></li>
+  <li><a href="/stats/index">Progress Stats</a></li>
   <li class="active"><a href="/exercise_logs">Exercise logs</a></li>
   <li><a href="/food_intake_logs">Food Intake logs</a></li>
   <li><a href="/weight_logs">Weight logs</a></li>
