--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1324,4 +1324,38 @@ $topbar-link-color-hover: #5fa0ff;
 // $topbar-sticky-class: ".sticky";
 // $topbar-arrows: true; //Set false to remove the triangle icon from the menu item
 
-@import 'foundation';
+// Make sure the charset is set appropriately
+@import "foundation/variables";
+
+// Foundation Components
+@import
+"foundation/components/global",
+"foundation/components/grid",
+"foundation/components/visibility",
+"foundation/components/block-grid",
+"foundation/components/type",
+"foundation/components/buttons",
+"foundation/components/forms",
+"foundation/components/custom-forms",
+"foundation/components/button-groups",
+"foundation/components/dropdown-buttons",
+"foundation/components/split-buttons",
+"foundation/components/section",
+"foundation/components/top-bar",
+"foundation/components/reveal",
+"foundation/components/clearing",
+"foundation/components/alert-boxes",
+"foundation/components/breadcrumbs",
+"foundation/components/keystrokes",
+"foundation/components/labels",
+"foundation/components/inline-lists",
+"foundation/components/pagination",
+"foundation/components/panels",
+"foundation/components/pricing-tables",
+"foundation/components/progress-bars",
+"foundation/components/side-nav",
+"foundation/components/sub-nav",
+"foundation/components/tables",
+"foundation/components/thumbs",
+"foundation/components/tooltips",
+"foundation/components/dropdown";
