removing stylesheets and js and also fixing the jquery toggle on profile page

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -29,7 +29,7 @@
         <%= f.radio_button :gender, 'female', {:class => "gender"} %>
       </div>
     </div>
-    <div id="woman">
+    <div id="woman" style="display:none;">
       <div class="row collapse">
         <div class="small-3 columns">
           <%= f.label :pregnant, class: "right inline", title: "Choose your gender", data: {tooltip: true} %>
