--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -649,3 +649,34 @@ div {
   }
 }
 /* @end */
+
+.hide {
+  display:none;
+  position:absolute;
+  z-index: 10;
+  background: #fff;
+}
+
+.hide img {
+  width: 50px;
+  height: 50px;
+}
+
+.pad {
+  padding: 50px 25px;
+  background-color: #ddd1ae;
+}
+
+.red_coloured {
+  color: red;
+}
+h1.title {
+  font-size: 120%;
+}
+h2.title {
+  font-size: 100%;
+}
+
+a:visited.button {
+  color: white;
+}
