--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,35 +27,17 @@
 </head>
 
 <body>
-<nav class="top-bar" id="nav">
-  <div>
-    <ul class="title-area">
-      <li class="name">
-        <h1><%= link_to "Diet Planner", root_path %></h1>
-      </li>
-    </ul>
-    <section class="top-bar-section">
-      <ul class="right">
-        <li><a href="/">Home</a></li>
-        <li><a href="/diet_planner">Diet Planner</a></li>
-        <li><a href="/recipes">Healthy Recipes</a></li>
-        <li><a href="/news">Healthy living News</a></li>
-        <% if current_user %>
-            <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
-        <% else %>
-            <li><%= link_to 'Register',  new_registration_path(:user) %></li>
-            <li><%= link_to 'Login', new_user_session_path %></li>
-        <% end %>
-      </ul>
-    </section>
-  </div>
-</nav>
 
-<div class="large-10 small-centered columns">
-
+<%= render "main_nav" %>
+<!-- loading bar displayed durring ajax requests -->
+<div id="loading" class="hide" style="width:100%; height:100%; z-index:5; background-color: white;;">
+  <img src="http://sierrafire.cr.usgs.gov/images/loading.gif" />
+  <span>Loading, please wait ...</span>
+</div>
+<div class="large-10 small-centered columns" id="content" style="z-index:1;">
   <% if current_user %>
       <div class="large-2 columns sidebar">
-        <%= render "site/side_bar" %>
+        <%= render "side" %>
       </div>
       <div class="large-10 columns">
         <%= yield %>
