--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,26 +30,26 @@
 
 <%= render "main_nav" %>
 <!-- loading bar displayed durring ajax requests -->
-<div id="loading" class="hide" style="width:100%; height:100%; z-index:5; background-color: white;;">
-  <img src="http://sierrafire.cr.usgs.gov/images/loading.gif" />
+<div id="loading" class="hide" style="width:100%; height:100%; z-index:5; background-color: white;">
+  <img src="http://sierrafire.cr.usgs.gov/images/loading.gif"/>
   <span>Loading, please wait ...</span>
 </div>
-<div class="large-10 small-centered columns" id="content" style="z-index:1;">
+<div class="large-10 small-centered columns" style="z-index:1;">
   <% if current_user %>
-      <div class="large-2 columns sidebar">
-        <%= render "side" %>
+      <div id="content">
+        <div class="large-2 columns sidebar">
+          <%= render "side" %>
+        </div>
+        <div class="large-10 columns">
+          <%= yield %>
+        </div>
       </div>
-      <div class="large-10 columns">
+  <% else %>
+      <div id="content">
         <%= yield %>
       </div>
-
-
-  <% else %>
-      <%= yield %>
   <% end %>
-
 </div>
-
 <%= javascript_include_tag "application" %>
 </body>
 </html>
