--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -190,32 +190,26 @@ div {
   color: green;
 }
 
-.field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
-}
-
 #error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-  h2 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px;
-    margin-bottom: 0px;
-    background-color: #c00;
-    color: #fff;
-  }
+  background-color: red;
+  border-style: solid;
+  border-width: 1px;
+  font-weight: bold;
+  margin-bottom: 1.25em;
+  position: relative;
+  padding: 0.6875em 0.7em 0.75em 0.6875em;
+  font-size: 0.95em;
+  color: white !important;
+  border-color: red;
+  text-align: center;
+
   ul li {
     font-size: 12px;
-    list-style: square;
+    list-style: square !important;
+    color: white;
+  }
+  ul {
+    margin-bottom: 0px;
   }
 }
 
@@ -651,7 +645,7 @@ div {
 /* @end */
 
 .hide {
-  display:none;
+  display:none !important;
   position:absolute;
   z-index: 10;
   background: #fff;
@@ -679,4 +673,34 @@ h2.title {
 
 a:visited.button {
   color: white;
+}
+
+.notice, .notice_signed_in {
+   background-color: green;
+   border-style: solid;
+   border-width: 1px;
+   display: block;
+   font-weight: bold;
+   margin-bottom: 1.25em;
+   position: relative;
+   padding: 0.6875em 1.3125em 0.75em 0.6875em;
+   font-size: 0.95em;
+   color: white !important;
+   border-color: #004600;
+   text-align: center;
+ }
+
+.alert, .alert_signed_in {
+  background-color: red;
+  border-style: solid;
+  border-width: 1px;
+  display: block;
+  font-weight: bold;
+  margin-bottom: 1.25em;
+  position: relative;
+  padding: 0.6875em 1.3125em 0.75em 0.6875em;
+  font-size: 0.95em;
+  color: white !important;
+  border-color: red;
+  text-align: center;
 }
