--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -1,8 +1,7 @@
-<%= form_for(@activity) do |f| %>
+<div class="row collapse">
+  <%= form_for(@activity) do |f| %>
     <% if @activity.errors.any? %>
         <div id="error_explanation">
-          <h2><%= pluralize(@activity.errors.count, "error") %> prohibited this activity from being saved:</h2>
-
           <ul>
             <% @activity.errors.full_messages.each do |msg| %>
                 <li><%= msg %></li>
@@ -10,7 +9,7 @@
           </ul>
         </div>
     <% end %>
-
+</div>
     <div class="row collapse">
       <div class="small-3 columns">
         <%= f.label :name, class: "right inline", title: "Type of activity", data: {tooltip: true} %>
