Added few placeholders and reduced the image size

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -658,7 +658,10 @@ div {
 
 .pad {
   padding: 50px 25px;
-  background-color: #ddd1ae;
+  background-color: #ece5db;
+}
+.pad img {
+  border: solid 1px white;
 }
 
 .red_coloured {
