--- a/app/views/exercise_logs/index.html.erb
+++ b/app/views/exercise_logs/index.html.erb
@@ -1,29 +1,31 @@
 <h1>Listing exercise logs</h1>
+<% if @exercise_logs.any? %>
+    <table>
+      <tr>
+        <th>Date</th>
+        <th>Calories burned</th>
+        <th>Type of activity</th>
+        <th>Length in minutes</th>
+        <th></th>
+        <th></th>
+        <th></th>
+      </tr>
 
-<table>
-  <tr>
-    <th>Date</th>
-    <th>Calories burned</th>
-    <th>Type of activity</th>
-    <th>Length in minutes</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @exercise_logs.each do |exercise_log| %>
-  <tr>
-    <td><%= exercise_log.exercise_date %></td>
-    <td><%= exercise_log.calories_burned %></td>
-    <td><%= exercise_log.activity.name %></td>
-    <td><%= exercise_log.length %></td>
-    <td><%= link_to 'Show', exercise_log %></td>
-    <td><%= link_to 'Edit', edit_exercise_log_path(exercise_log) %></td>
-    <td><%= link_to 'Destroy', exercise_log, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+      <% @exercise_logs.each do |exercise_log| %>
+          <tr>
+            <td><%= exercise_log.exercise_date %></td>
+            <td><%= exercise_log.calories_burned %></td>
+            <td><%= exercise_log.activity.name %></td>
+            <td><%= exercise_log.length %></td>
+            <td><%= link_to 'Show', exercise_log %></td>
+            <td><%= link_to 'Edit', edit_exercise_log_path(exercise_log) %></td>
+            <td><%= link_to 'Destroy', exercise_log, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+          </tr>
+      <% end %>
+    </table>
+<% else %>
+    <div>You have not logged any exercise activities yet. Press the button below to log one.</div>
 <% end %>
-</table>
-
-<br />
+<br/>
 
 <%= link_to 'New Exercise log', new_exercise_log_path, class: "small button radius" %>
