--- a/app/views/food_intake_logs/index.html.erb
+++ b/app/views/food_intake_logs/index.html.erb
@@ -1,29 +1,32 @@
 <h1>Your food intake logs</h1>
+<% if @food_intake_logs.any? %>
+    <table>
+      <tr>
+        <th>Intake date</th>
+        <th>Intake time</th>
+        <th>Food</th>
+        <th>Amount[grams]</th>
+        <th></th>
+        <th></th>
+        <th></th>
+      </tr>
 
-<table>
-  <tr>
-    <th>Intake date</th>
-    <th>Intake time</th>
-    <th>Food</th>
-    <th>Amount[grams]</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @food_intake_logs.each do |food_intake_log| %>
-  <tr>
-    <td><%= food_intake_log.intake_date %></td>
-    <td><%= food_intake_log.intake_time %></td>
-    <td><%= food_intake_log.food.name %></td>
-    <td><%= food_intake_log.amount %></td>
-    <td><%= link_to 'Nutritional value', food_intake_log %></td>
-    <td><%= link_to 'Edit', edit_food_intake_log_path(food_intake_log) %></td>
-    <td><%= link_to 'Destroy', food_intake_log, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+      <% @food_intake_logs.each do |food_intake_log| %>
+          <tr>
+            <td><%= food_intake_log.intake_date %></td>
+            <td><%= food_intake_log.intake_time %></td>
+            <td><%= food_intake_log.food.name %></td>
+            <td><%= food_intake_log.amount %></td>
+            <td><%= link_to 'Nutritional value', food_intake_log %></td>
+            <td><%= link_to 'Edit', edit_food_intake_log_path(food_intake_log) %></td>
+            <td><%= link_to 'Destroy', food_intake_log, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+          </tr>
+      <% end %>
+    </table>
+<% else %>
+    <div>You have not logged any of your meals yet. Press the button below to log one.</div>
 <% end %>
-</table>
 
-<br />
+<br/>
 
 <%= link_to 'New Food intake log', new_food_intake_log_path, class: "small button radius" %>
