Made things run faster

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -674,8 +674,8 @@ h2.title {
   font-size: 100%;
 }
 
-a:visited.button {
-  color: white;
+a:visited.button{
+  color: white !important;
 }
 
 .notice, .notice_signed_in {
