--- a/app/views/nutritional_advice/index.html.erb
+++ b/app/views/nutritional_advice/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Nutritional Advice</h1>
+<p> The following advice is given based on your logs from the past 4 weeks. </p>
 <div id="accordion">
   <h3>Calories Intake</h3>
 
