A few small changes

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -707,3 +707,11 @@ a:visited.button{
   border-color: red;
   text-align: center;
 }
+
+#logged_in {
+  color: #7cc4ff;
+  font-size: 0.8125em;
+  font-weight: bold;
+  display: block;
+  padding-top: 1em;
+}
