--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -8,7 +8,7 @@
             <th>Brestfeeding</th>
         <% end %>
         <th>Height</th>
-        <th>Dob</th>
+        <th>Date of birth</th>
         <th></th>
         <th></th>
         <th></th>
