--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -28,7 +28,7 @@
       <% end %>
     </div>
     <div class="small-6 columns">
-      <%= image_tag("/assets/body.jpg", {:alt => "home image", :width => 400, :height => 524, :title => "Click here to return to Home"}) %>
+      <%= image_tag("/assets/body.jpg", {:class => "right", :alt => "home image", :width => 400, :height => 524, :title => "Click here to return to Home"}) %>
     </div>
   </div>
 </div>
