--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
       <div id="content">
         <div>
         <div id="notice_signed_in" class="notice hide"><%= notice %></div>
-        <div id="alert_signed_n" class="alert hide"><%= alert %></div>
+        <div id="alert_signed_in" class="alert hide"><%= alert %></div>
         </div>
         <div class="large-2 columns sidebar">
           <%= render "side" %>
