--- a/app/views/application/_side.html.erb
+++ b/app/views/application/_side.html.erb
@@ -1,19 +1,20 @@
 <ul class="side-nav">
-  <li><a href="/profiles">Profile</a></li>
-  <li><a href="/motivational_images">Motivational images</a></li>
-  <li><a href="/stats/index">Progress Stats</a></li>
-  <li><a href="/exercise_logs">Exercise logs</a></li>
-  <li><a href="/food_intake_logs">Food Intake logs</a></li>
-  <li><a href="/weight_logs">Weight logs</a></li>
-  <li><a href="/nutritional_advice/index">Nutritional advise</a></li>
+  <li> <%= link_to "Profile", profiles_path, :class => "#{'selected' if @tab=='profile'}" %></li>
+  <li> <%= link_to "Motivational images", motivational_images_path, :class => "#{'selected' if @tab=='images'}" %></li>
+  <li> <%= link_to "Progress Stats",stats_index_path, :class => "#{'selected' if @tab=='stats'}" %></li>
+  <li> <%= link_to "Exercise logs",exercise_logs_path, :class => "#{'selected' if @tab=='exercise_logs'}" %></li>
+  <li> <%= link_to "Food Intake logs",food_intake_logs_path, :class => "#{'selected' if @tab=='food_intake_logs'}" %></li>
+  <li> <%= link_to "Weight logs",weight_logs_path, :class => "#{'selected' if @tab=='weight_logs'}" %></li>
+  <li> <%= link_to "Nutritional advise",nutritional_advice_index_path, :class => "#{'selected' if @tab=='advice'}" %></li>
+
   <% if current_user && current_user.admin? %>
       <li class="divider"></li>
-      <li><a href="/recipes">Recipes</a></li>
-      <li><a href="/ingredients">Ingredients</a></li>
+      <li> <%= link_to "Recipes",recipes_path, :class => "#{'selected' if @tab=='recipes'}" %></li>
+      <li> <%= link_to "Ingredients",ingredients_path, :class => "#{'selected' if @tab=='ingredients'}" %></li>
       <li class="divider"></li>
-      <li><a href="/foods">Foods</a></li>
-      <li><a href="/food_categories">Food Categories</a></li>
+      <li> <%= link_to "Foods",foods_path, :class => "#{'selected' if @tab=='foods'}" %></li>
+      <li> <%= link_to "Food categories",food_categories_path, :class => "#{'selected' if @tab=='food_categories'}" %></li>
       <li class="divider"></li>
-      <li><a href="/activities">Activities</a></li>
+      <li> <%= link_to "Activities",activities_path, :class => "#{'selected' if @tab=='activities'}" %></li>
   <% end %>
 </ul>
