--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,6 @@
 <h1>Register</h1>
-
+<% @tab = 'register'%>
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-    <%require 'debugger'; debugger  %>
     <%= devise_error_messages! %>
 
 
