--- a/app/views/recipes/_recipes.html.erb
+++ b/app/views/recipes/_recipes.html.erb
@@ -19,7 +19,7 @@
   <% for recipe in @recipes %>
       <tr>
         <td><%= recipe.title %></td>
-        <td style='width:250px;'><%= image_tag recipe.picture.url(:medium) %></td>
+        <td style='width:250px;'> <%= link_to (image_tag recipe.picture.url(:medium)), recipe %></td>
         <td><%= recipe.preparation_time %> minutes</td>
         <td><%= recipe.cooking_time %> minutes</td>
         <td><%= recipe.ready_in_time %> minutes</td>
