Fixing video and adding the tabs functionality

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -728,3 +728,7 @@ ul.side-nav a.selected  {
   background-color: white;
   border-bottom: 1px solid #383c36;
 }
+
+.top-bar-section ul li.session {
+  margin-left: 20px;
+}
