--- a/app/views/application/_main_nav.html.erb
+++ b/app/views/application/_main_nav.html.erb
@@ -8,15 +8,14 @@
     <section class="top-bar-section">
       <ul class="right">
         <li> <%= link_to "Home", site_index_path, :class => "#{'selected' if @tab=='site'}" %></li>
-        <li> <%= link_to "Diet Planner", stats_index_path, :class => "#{'selected' if @tab=='planner' || @tab == 'profile'|| @tab == 'images' }" %></li>
-        <li> <%= link_to "Healthy Recipes", recipes_path, :class => "#{'selected' if @tab=='recipes'}" %></li>
+        <li> <%= link_to "Diet Planner", site_dashboard_path, :class => "#{'selected' if DIET_PLANNER.include?(@tab)}" %></li>
+        <li> <%= link_to "Healthy Recipes", recipes_path, :class => " #{'selected' if @tab=='recipes'}" %></li>
         <% if current_user %>
-            <li id="logged_in">logged in as <%= current_user.email %></li>
-            <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
+            <li class="session"><%= link_to 'Logout', destroy_user_session_path, :method => :delete, class: "small red button radius" %></li></li>
 
         <% else %>
-            <li><%= link_to 'Register',  new_registration_path(:user), :class => "#{'selected' if @tab=='register'}" %></li>
-            <li><%= link_to 'Login', new_user_session_path , :class => "#{'selected' if @tab=='login'}" %></li>
+            <li class="session"><%= link_to 'Register',  new_registration_path(:user), :class => "small button radius #{'selected' if @tab=='register'}" %></li>
+            <li class="session"><%= link_to 'Login', new_user_session_path , class: "small button radius" %></li>
         <% end %>
       </ul>
     </section>
