--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -10,8 +10,6 @@
         <th>Height</th>
         <th>Date of birth</th>
         <th></th>
-        <th></th>
-        <th></th>
       </tr>
       <tr>
         <td><%= @profile.gender %></td>
@@ -22,9 +20,7 @@
         <% end %>
         <td><%= @profile.height %></td>
         <td><%= @profile.dob %></td>
-        <td><%= link_to 'Show', @profile %></td>
-        <td><%= link_to 'Edit', edit_profile_path(@profile) %></td>
-        <td><%= link_to 'Destroy', @profile, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+        <td><%= link_to 'Edit Information', edit_profile_path(@profile) %></td>
       </tr>
 
     </table>
