--- a/app/views/exercise_logs/_form.html.erb
+++ b/app/views/exercise_logs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@exercise_log) do |f| %>
+<%= form_for(@exercise_log, remote: true) do |f| %>
     <% if @exercise_log.errors.any? %>
         <div id="error_explanation">
           <ul>
