--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@food) do |f| %>
+<%= form_for(@food, remote: true) do |f| %>
     <% if @food.errors.any? %>
         <div id="error_explanation">
           <ul>
