--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,14 @@
 
 <%= render "main_nav" %>
 
-<div class="large-10 small-centered columns" style="z-index:1;">
+<div class="large-10 small-centered columns">
+  <div id="loading" class="hide">
+    <img src="http://sierrafire.cr.usgs.gov/images/loading.gif" style="display:block; margin: auto; padding:0;" />
+    <span><p style="text-align: center;">Loading, please wait ...</p></span>
+  </div>
 
   <% if current_user %>
-      <div id="content">
+
         <div>
           <div id="notice_signed_in" class="notice hide"><%= notice %></div>
           <div id="alert_signed_in" class="alert hide"><%= alert %></div>
@@ -42,7 +46,7 @@
           <%= render "side" %>
         </div>
         <div class="large-10 columns">
-
+          <div id="content">
           <%= yield %>
         </div>
       </div>
