--- a/app/views/motivational_images/_form.html.erb
+++ b/app/views/motivational_images/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@motivational_image) do |f| %>
+<%= form_for(@motivational_image, remote: true) do |f| %>
     <% if @motivational_image.errors.any? %>
         <div id="error_explanation">
           <ul>
