--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Progress statistics </h1>
+<div id="the_modal">
 <div id="videoModal" class="reveal-modal large" data-reveal style="display: none; opacity: 1;">
   <h2>More about BMI</h2>
   <iframe src="//player.vimeo.com/video/70104307" width="100%" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -7,8 +8,8 @@
   <a class="close-reveal-modal">×</a>
 </div>
 
-<p><a href="#" data-reveal-id="videoModal" class="radius button">Watch BMI video</a></p>
-
+<p><a href="#" data-reveal-id="videoModal" class="radius button" id="reveal">Watch BMI video</a></p>
+</div>
 <% if current_user && current_user.profile %>
     <% if current_user.profile.height.nil? %>
         <div>Please submit your height information
