--- a/app/views/weight_logs/_form.html.erb
+++ b/app/views/weight_logs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@weight_log) do |f| %>
+<%= form_for(@weight_log, remote: true) do |f| %>
     <% if @weight_log.errors.any? %>
         <div id="error_explanation">
           <ul>
