--- a/app/views/food_intake_logs/show.html.erb
+++ b/app/views/food_intake_logs/show.html.erb
@@ -1,3 +1,8 @@
+<div>
+  <div id="notice_signed_in" class="notice hide"><%= notice %></div>
+  <div id="alert_signed_in" class="alert hide"><%= alert %></div>
+</div>
+
 <h1>Nutritional value</h1>
 <%= link_to 'Back', food_intake_logs_path, class: "small button radius" %>
 <table>
