--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,3 +1,8 @@
+<div>
+  <div id="notice_signed_in" class="notice hide"><%= notice %></div>
+  <div id="alert_signed_in" class="alert hide"><%= alert %></div>
+</div>
+
 <h1 xmlns="http://www.w3.org/1999/html">Healthy recipes</h1>
 
 <%= form_tag recipes_path, :method => 'get', :id => "recipes_search" do %>
