--- a/app/views/food_categories/index.html.erb
+++ b/app/views/food_categories/index.html.erb
@@ -1,3 +1,8 @@
+<div>
+  <div id="notice_signed_in" class="notice hide"><%= notice %></div>
+  <div id="alert_signed_in" class="alert hide"><%= alert %></div>
+</div>
+
 <h1>Listing food categories</h1>
 <%= link_to 'New Food Category', new_food_category_path, id: "new_link", remote: true, class: "small button radius" %>
 <br/>  <br/>
