--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,3 +1,8 @@
+<div>
+  <div id="notice_signed_in" class="notice hide"><%= notice %></div>
+  <div id="alert_signed_in" class="alert hide"><%= alert %></div>
+</div>
+
 <h1>Listing foods</h1>
 
 <table>
