--- a/app/views/nutritional_advice/index.html.erb
+++ b/app/views/nutritional_advice/index.html.erb
@@ -1,3 +1,8 @@
+<div>
+  <div id="notice_signed_in" class="notice hide"><%= notice %></div>
+  <div id="alert_signed_in" class="alert hide"><%= alert %></div>
+</div>
+
 <h1>Nutritional Advice</h1>
 <% if current_user.profile %>
 
