--- a/app/views/site/dashboard.html.erb
+++ b/app/views/site/dashboard.html.erb
@@ -1,4 +1,9 @@
 <div id="display">
+  <div>
+    <div id="notice_signed_in" class="notice hide"><%= notice %></div>
+    <div id="alert_signed_in" class="alert hide"><%= alert %></div>
+  </div>
+
   <h1>Welcome!</h1>
 
   <p>You are logged with this email address: <%= current_user.email %>.</p>
