--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -1,4 +1,10 @@
+<div>
+  <div id="notice_signed_in" class="notice hide"><%= notice %></div>
+  <div id="alert_signed_in" class="alert hide"><%= alert %></div>
+</div>
+
 <h1>Progress statistics </h1>
+
 <div id="the_modal">
 <div id="videoModal" class="reveal-modal large" data-reveal style="display: none; opacity: 1;">
   <h2>More about BMI</h2>
