--- a/app/views/weight_logs/show.html.erb
+++ b/app/views/weight_logs/show.html.erb
@@ -1,7 +1,11 @@
-<h1>Weight log</h1>
-<p id="notice"><%= notice %></p>
+<div>
+  <div id="notice_signed_in" class="notice hide"><%= notice %></div>
+  <div id="alert_signed_in" class="alert hide"><%= alert %></div>
+</div>
 
+<h1>Weight log</h1>
 <p>
+<%= link_to 'Back', weight_logs_path, class: "small button radius" %>
   <b>Weight:</b>
   <%= @weight_log.weight %>
 </p>
@@ -12,4 +16,4 @@
 </p>
 
 <%= link_to 'Edit', edit_weight_log_path(@weight_log), class: "small button radius" %>
-<%= link_to 'Back', weight_logs_path, class: "small button radius" %>
+
