Small changes to javascript and views

--- a/app/views/food_intake_logs/_form.html.erb
+++ b/app/views/food_intake_logs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@food_intake_log, remote: true) do |f| %>
+<%= form_for(@food_intake_log) do |f| %>
     <% if @food_intake_log.errors.any? %>
         <div id="error_explanation">
           <ul>
