--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <h1>Progress statistics </h1>
-
+<h3>Your BMI</h3>
 <div id="the_modal">
 <div id="videoModal" class="reveal-modal large" data-reveal style="display: none; opacity: 1;">
   <h2>More about BMI</h2>
@@ -14,7 +14,7 @@
   <a class="close-reveal-modal">×</a>
 </div>
 
-<p><a href="#" data-reveal-id="videoModal" class="radius button" id="reveal">Watch BMI video</a></p>
+<p><a href="#" data-reveal-id="videoModal" class="radius button" id="reveal">What is BMI?</a></p>
 </div>
 <% if current_user && current_user.profile %>
     <% if current_user.profile.height.nil? %>
@@ -44,6 +44,9 @@
             <%= link_to 'Log your weight measurement', new_weight_log_path, class: "small button radius" %>
         <% end %>
     <% end %>
+    <br />
+    <br />
+    <h3>Your Progress</h3>
     <div id="myfirstchart" class="graph-container">
       <%= content_tag :div, "", id: "weight_logs_chart", data: {weight_logs: @weight_logs} %>
     </div>
