Moved some of the CoffeeScriot stuff to index.js

--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@ingredient, remote: true) do |f| %>
+<%= form_for(@ingredient) do |f| %>
     <% if @ingredient.errors.any? %>
         <div id="error_explanation">
           <ul>
