--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -4,17 +4,17 @@
 </div>
 
 <h1>Progress statistics </h1>
-<h3>Your BMI</h3>
+<h3>BMI healthy weight range</h3>
 <div id="the_modal">
-<div id="videoModal" class="reveal-modal large" data-reveal style="display: none; opacity: 1;">
-  <h2>More about BMI</h2>
-  <iframe src="//player.vimeo.com/video/70104307" width="100%" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  <p><a href="http://vimeo.com/70104307">BMI Calculator For Women And Men</a> from
-    <a href="http://vimeo.com/kidandparent">Kid And Parent</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-  <a class="close-reveal-modal">×</a>
-</div>
+  <div id="videoModal" class="reveal-modal large" data-reveal style="display: none; opacity: 1;">
+    <h2>More about BMI</h2>
+    <iframe src="//player.vimeo.com/video/70104307" width="100%" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <p><a href="http://vimeo.com/70104307">BMI Calculator For Women And Men</a> from
+      <a href="http://vimeo.com/kidandparent">Kid And Parent</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+    <a class="close-reveal-modal">×</a>
+  </div>
 
-<p><a href="#" data-reveal-id="videoModal" class="radius button" id="reveal">What is BMI?</a></p>
+  <p><a href="#" data-reveal-id="videoModal" class="small radius button" id="reveal">What is BMI?</a></p>
 </div>
 <% if current_user && current_user.profile %>
     <% if current_user.profile.height.nil? %>
@@ -44,8 +44,8 @@
             <%= link_to 'Log your weight measurement', new_weight_log_path, class: "small button radius" %>
         <% end %>
     <% end %>
-    <br />
-    <br />
+    <br/>
+    <br/>
     <h3>Your Progress</h3>
     <div id="myfirstchart" class="graph-container">
       <%= content_tag :div, "", id: "weight_logs_chart", data: {weight_logs: @weight_logs} %>
